# uspekpy

./: README.md  app.py  inputH60_no_us_@2500mm.xlsx  package.json  pyproject.toml  simple_app.py  usage.py
data/input_pal/: h_amb_10.csv  hp_3_cyl.csv  mutr.txt
data/output_pal/: hp_3_cyl.csv_N-60_resultados.txt
examples/: SpekWrapper.py  SpekWrapper_from_files.py  SpekWrapper_usage.py  USpeck_from_files.py  USpek.py  USpek_usage.py  batch_simulation_from_csv.py  batch_simulation_from_excel.py  batch_simulation_usage.py  raw_code.py  usage.py
examples/data/: input.csv  input.xlsx
examples/data/input/: hk_h_prime_0.07.csv  hk_hp_0.07_slab.csv  hk_hp_3_cyl.csv  input.csv  input.xlsx  mu_tr_coeffs.txt
examples/data/input_pal/: hk_h_prime_0.07.csv  inputN60_no_us_@2500mm_TEST.xlsx
examples/h_amb/: inputN60_no_us_@1000mm_TEST.xlsx
examples/hp_007_slab/: hp_0.07_slab.csv
examples/ref_output/: h_prime_0.07.csv_N-60_resultados.txt
examples/ref_output_PAL/: h_amb_10.csv_N-60_resultados.txt  hp_0.07_slab.csv_N-60_resultados.txt
scratches/: check.py  digest.py  log.py  outputs.py
src/spekpy/: SpekAniso.py  SpekModel.py  SpekTools.py
src/spekpy/data/tables/advanced/: Z74_1.npz  Z74_10.npz  Z74_11.npz  Z74_12.npz  Z74_13.npz  Z74_14.npz  Z74_15.npz  Z74_16.npz  Z74_17.npz  Z74_2.npz  Z74_3.npz  Z74_9.npz  Z74_E0sim.npz
src/uspekpy/: simulation.py  uspek.py  wrapper.py
tests/: test_simulation.py  test_uspek.py  test_wrapper.py
unit_function/: conv_coeffs_h_amb_10.csv  input.xlsx  unit_fuction.py
uspeckpy/: digest.py  main.py  simulation.py  tools.py  uspek.py  uspekpy.py  wrapper.py
verification/: verification.csv  verification.py
verification/raw_code/: hp_0.07_slab.csv_H-60_resultados.txt  raw_code.py
verification/raw_code/input/: raw_input_h60_hp_07_slab_45.xlsx  raw_input_h60_hp_07_slab_45_no_unc.xlsx
verification/uspekpy/: output.csv  uspek.py
verification/uspekpy/input/: input_h60_hp_07_slab_45.xlsx  input_h60_hp_07_slab_45_no_unc.xlsx
