[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uspekpy"
version = "1.0.0"
description = 'Radiation protection quantities for x-rays with uncertainties using SpekPy and Monte Carlo techniques'
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["uncertainty", "x-rays", "spectrum", "monte carlo"]
authors = [
  { name = "Paz Aviles", email = "Paz.Aviles@ciemat.es" },
  { name = "Xandra Campo", email = "xandra.campo@ciemat.es" }
]
maintainers = [
  { name = "Paz Aviles", email = "Paz.Aviles@ciemat.es" },
  { name = "Xandra Campo", email = "xandra.campo@ciemat.es" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scipy>=1.13.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "openpyxl>=3.1.2",
  { git = "https://bitbucket.org/spekpy/spekpy_release.git", branch = "master" }
]

[project.urls]
Repository = "https://github.com/lmri-met/uspekpy"
Documentation = "https://github.com/lmri-met/uspekpy#readme"
Issues = "https://github.com/lmri-met/uspekpy/issues"
